order/cart bug fixed, test cases added

--- a/example.env
+++ b/example.env
@@ -2,3 +2,4 @@ PORT = 5002
 JWT_SECRET=qwertyuiop
 TEST_SERVER_URL=http://localhost:5002
 MASTER_PASSWORD=1234567890
+FRONTEND_URL=http://localhost:5173
