--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "math_quiz_backend",
+  "name": "ecommerce_backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -32,11 +32,14 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
     "@types/bcrypt": "^6.0.0",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/socket.io": "^3.0.1",
     "@types/supertest": "^6.0.3",
+    "babel-jest": "^30.2.0",
     "jest": "^30.2.0",
     "reflect-metadata": "^0.2.2",
     "supertest": "^7.1.4",
